Bug 362341 - Custom shortcuts go away is scheme is edited a second time
Summary: Custom shortcuts go away is scheme is edited a second time
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-27 09:17 UTC by Raghavendra kamath
Modified: 2016-05-05 07:56 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Raghavendra kamath 2016-04-27 09:17:22 UTC
When a user changes some shortcut , krita retains them after restart but when the user changes something again and restarts krita , the first set of changes are gone and the second set only remains.

Reproducible: Always

Steps to Reproduce:
1.Open krita and add a shortcut , say for outline selection tool ( e.g Shift +p)
2.restart krita , the outline selection has its shortcut intact. (i.e shift + p)
3.Now again add one more shortcut say for polygon selection too ( e.g Shift + A)
4. restart krita , the shortcut for polygon selection tool is retained bu the shortcut for outilne selecton tool set initially is lost. 


Actual Results:  
upon restart previously edited shortcut are lost on subsequent changes to shortcut . Only the last changed shortcuts are remembered.

Expected Results:  
all the changes should be remembered not just last change upon restart
Comment 1 Raghavendra kamath 2016-04-27 09:25:00 UTC
actually on further testing i found that there is no need for restarting , just change a shortcut close the settings dialog , and change a shortcut again and close the settings dialog , you'll notice the shortcut your saved the first time is lost
Comment 2 Quiralta 2016-04-27 15:09:48 UTC
Experiencing the same exact behavior here. with a 4/26 build.
Comment 3 Dmitry Kazakov 2016-05-05 07:56:47 UTC
Should be fixed in 
https://phabricator.kde.org/rKRITA932bcb70669e9a25778bdc50d766f60f99f5f7b2