Fix saving shortcuts

Be more careful setting "defaultShortcuts." KActionCollection compares
shortcut editor settings with defaultShortcuts property and only saves
if they are different.

Maniphest Tasks: T1244

BUG: 362341